[package]
name = "carrot-commons"
description = "Common Rust code used throughout the Carrot protocol and its services."
version = "0.2.2"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
backoff = { version = "0.4.0", features = ["tokio"] }
directories = "5.0.1"
governor = "0.6.0"
reqwest = { version = "0.11.22", features = ["json", "stream"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
serde_yaml = "0.9.25"
thiserror = "1.0.50"
url = "2.4.1"
